--- a/style.css
+++ b/style.css
@@ -103,3 +103,22 @@ nav {
     top: 0;
     z-index: 1000;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+
+table, th, td {
+    border: 1px solid #6e6e6e;
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #818181;
+}
